# rust_linux_pam

./: Cargo.toml  README.md
src/: funct.rs  main.rs
