[package]
name = "rust_linux_pam"
version = "0.1.0"
authors = ["IsaacJReay <isaacjacksonreay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pam = "0.7.0"
rpassword = "5.0"
users = "0.11"
client = "*"
pam-sys = "*"